progs/cpp/c101246b-edbe-4bdd-a461-af735dc167cd/err.txt
progs/cpp/c101246b-edbe-4bdd-a461-af735dc167cd/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/c101246b-edbe-4bdd-a461-af735dc167cd/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/c101246b-edbe-4bdd-a461-af735dc167cd/prog.cpp: In function ‘int main()’:
progs/cpp/c101246b-edbe-4bdd-a461-af735dc167cd/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/c101246b-edbe-4bdd-a461-af735dc167cd/prog.cpp:7:7: error: expected ‘;’ before ‘return’
